--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,7 +1,12 @@
 body {
     background-color:#1F2937;
-    width: 550px;
-    height: 550px;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 
@@ -13,6 +18,9 @@ body {
     color: #FFF; 
     line-height: 40px; 
     letter-spacing: -1px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #sub2{
@@ -79,4 +87,8 @@ body {
 }
 .bod{
     margin: 115px 52px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
